Some fixes to the Custom Props feature (#3241)
* rename Properties to Custom Properties in Site Settings

* fix docs link for custom props

* add back the external links for special goal URLs and 404 paths

* grandfathering note

--- a/lib/plausible_web/templates/site/settings_props.html.heex
+++ b/lib/plausible_web/templates/site/settings_props.html.heex
@@ -1,8 +1,9 @@
 <section class="shadow bg-white dark:bg-gray-800 sm:rounded-md sm:overflow-hidden">
   <PlausibleWeb.Components.Generic.notice class="rounded-t-md rounded-b-none">
     Properties is an upcoming premium feature that's free-to-use during the
-    private preview. Pricing will be announced soon. See examples and learn
-    more in <.link
+    private preview. Pricing will be announced soon. Existing subscribers will
+    be grandfathered and will keep having access to custom properties without
+    any change to their plan. See examples and learn more in <.link
       class="font-medium text-yellow underline hover:text-yellow-600"
       href="https://plausible.io/docs/custom-pageview-props"
       target="_blank"
@@ -14,7 +15,7 @@
     <header class="w-full flex">
       <span class="flex-1">
         <h1 class="text-lg leading-6 font-medium text-gray-900 dark:text-gray-100">
-          Properties
+          Custom Properties
         </h1>
 
         <h2 class="mt-1 text-sm leading-5 text-gray-500 dark:text-gray-400">
@@ -24,7 +25,7 @@
       </span>
 
       <.link
-        href="https://plausible.io/docs/custom-pageview-props"
+        href="https://plausible.io/docs/custom-props/introduction"
         target="_blank"
         rel="noreferrer"
       >
