--- a/lib/plausible_web/templates/email/trial_upgrade_email.html.eex
+++ b/lib/plausible_web/templates/email/trial_upgrade_email.html.eex
@@ -1,12 +1,12 @@
 Thanks for exploring Plausible, a simple and privacy-friendly alternative to Google Analytics. Your free 30-day trial is ending <%= @day %>, but you can keep using Plausible by upgrading to a paid plan.
 <br /><br />
 In the last month, your account has used <%= PlausibleWeb.AuthView.delimit_integer(@usage) %> billable pageviews<%= if @custom_events > 0, do: " and custom events in total", else: "" %>.
-<%= if @usage <= 10_000_000 do %>
+<%= if @suggested_plan == :enterprise do %>
+This is more than our standard plans, so please reply back to this email to get a quote for your volume.
+<% else %>
 Based on that we recommend you select the <%= @suggested_plan.volume %>/mo plan.
 <br /><br />
 <%= link("Upgrade now", to: "#{plausible_url()}/billing/upgrade") %>
 <br /><br />
 Have a question, feedback or need some guidance? Just reply to this email to get in touch!
-<% else %>
-This is more than our standard plans, so please reply back to this email to get a quote for your volume.
 <% end %>
