Add login link to 404 page (#3288)
* Add login link to 404 page

* Fix 404 test

* Fix another test

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -22,6 +22,10 @@
   @apply text-indigo-600 bg-transparent border border-indigo-600;
 }
 
+.button-outline:hover {
+  @apply text-white;
+}
+
 .button-sm {
   @apply px-4 py-2 text-sm;
 }
