Implement limits for team members (#3305)
* Refactor MembershipController.invite_member/2

This commit refactors the controller action used for creating new
invitations. It moves the code to Plausible.Sites.invite/4 and replaces
`ifs` and `cases` with `with`.

* Add team_member_limit to plan definition

* Create usage and limits functions for team members

* Apply team member limit when inviting new users

* Add team members to Usage & Limits section

* Change invite function to receive email address instead of %User{}

* Wrap invite function in a DB transaction

* Remove unnecessary joins from team member usage query

* Replace UNION ALL with UNION to remove duplicates

--- a/lib/plausible_web/templates/auth/user_settings.html.heex
+++ b/lib/plausible_web/templates/auth/user_settings.html.heex
@@ -151,6 +151,11 @@
           usage={@site_usage}
           limit={@site_limit}
         />
+        <PlausibleWeb.Components.Billing.usage_and_limits_row
+          title="Team members"
+          usage={@team_member_usage}
+          limit={@team_member_limit}
+        />
       </PlausibleWeb.Components.Billing.usage_and_limits_table>
     </article>
 
