--- a/lib/plausible_web/templates/site/settings_danger_zone.html.eex
+++ b/lib/plausible_web/templates/site/settings_danger_zone.html.eex
@@ -4,11 +4,11 @@
       <h2 class="text-lg leading-6 font-medium text-gray-900 dark:text-gray-100">Danger zone</h2>
       <p class="mt-1 text-sm leading-5 text-gray-500 dark:text-gray-200">Destructive actions below can result in irrecoverable data loss. Be careful.</p>
     </div>
-    <%= if @conn.assigns[:current_user_role] == :owner do %> 
+    <%= if @conn.assigns[:current_user_role] == :owner do %>
       <li class="py-4 flex items-center justify-between space-x-4">
         <div class="flex flex-col">
           <p class="text-sm leading-5 font-medium text-gray-900 dark:text-gray-100">
-          Transfer site ownership
+          Transfer Site Ownership
           </p>
           <p class="text-sm leading-5 text-gray-500 dark:text-gray-200">
           Transfer ownership of the site to a different account
@@ -22,7 +22,7 @@
     <li class="py-4 flex items-center justify-between space-x-4">
       <div class="flex flex-col">
         <p class="text-sm leading-5 font-medium text-gray-900 dark:text-gray-100">
-        Reset stats
+        Reset Stats
         </p>
         <p class="text-sm leading-5 text-gray-500 dark:text-gray-200">
         Reset all stats but keep the site configuration intact
@@ -35,7 +35,7 @@
     <li class="py-4 flex items-center justify-between space-x-4">
       <div class="flex max-w-md flex-col">
         <p class="text-sm leading-5 font-medium text-gray-900 dark:text-gray-100">
-        Delete site
+        Delete Site
         </p>
         <p class="text-sm leading-5 text-gray-500 dark:text-gray-200">
         Permanently remove all stats and the site configuration too
