--- a/lib/plausible_web/templates/site/settings_funnels.html.heex
+++ b/lib/plausible_web/templates/site/settings_funnels.html.heex
@@ -12,7 +12,7 @@
     <header class="relative">
       <h2 class="text-lg leading-6 font-medium text-gray-900 dark:text-gray-100">Funnels</h2>
       <p class="mt-1 text-sm leading-5 text-gray-500 dark:text-gray-200">
-        Compose goals into funnels
+        Compose Goals into Funnels
       </p>
 
       <%= link(to: "https://plausible.io/docs/funnel-analysis", target: "_blank", rel: "noreferrer") do %>
@@ -35,7 +35,7 @@
     <PlausibleWeb.Components.Site.Feature.toggle
       site={@site}
       setting={:funnels_enabled}
-      label="Show funnels in the dashboard"
+      label="Show Funnels in the Dashboard"
       conn={@conn}
     >
       <%= live_render(@conn, PlausibleWeb.Live.FunnelSettings,
