--- a/lib/plausible_web/templates/site/settings_goals.html.heex
+++ b/lib/plausible_web/templates/site/settings_goals.html.heex
@@ -8,7 +8,7 @@
       You can also <a
         href={Routes.site_path(@conn, :settings_funnels, @site.domain)}
         class="text-indigo-500 underline"
-      >compose goals into funnels</a>.
+      >compose Goals into Funnels</a>.
     </p>
 
     <%= link(to: "https://plausible.io/docs/goal-conversions", target: "_blank", rel: "noreferrer") do %>
@@ -31,7 +31,7 @@
   <PlausibleWeb.Components.Site.Feature.toggle
     site={@site}
     setting={:conversions_enabled}
-    label="Show goals in the dashboard"
+    label="Show Goals in the Dashboard"
     conn={@conn}
   >
     <%= live_render(@conn, PlausibleWeb.Live.GoalSettings,
