Props Settings UI to match Goals Settings (#3322)
* Add hint to creatable ComboBoxes without suggestions available

* Load external resources once in funnel settings

* Load external resources once in goal settings

* Make Custom Props Settings UI match Goal Settings

* Remove unnecessary goals query

This should be done only once in the live view

* Remove funnels feature flag

* fixup

* Make the modal scrollable

* By default, focus first suggestion for creatables

* Add sample props to seeds

* Load all suggestions asynchronously, unless `Mix.env == :test`

* ComboBox: Fix inconsistent suggestions

We require "Create ..." element to be only focused
when there are no suggestions available.
This causes some issues, depending on the state,
the least focusable index might be either 0 ("Create...")
or 1. This patch addresses all the quirks with focus.

* Fix ComboBox max results message

So that AlpineJS doesn't think it's a focusable
option.

* Keep the state up to date when changing props

* Update seeds with sensible prop names

* Make escape work for closing combobox suggestions

Co-authored-by: Uku Taht <Uku.taht@gmail.com>

* Revert "Make escape work for closing combobox suggestions"

This reverts commit 306866d2a15d652eaa0327f1b96a302de5e426e5.

@ukutaht unfortunately this makes it impossible to select
an suggestion.

* Revert "Revert "Make escape work for closing combobox suggestions""

This reverts commit 4844857812d21ea1233fe3b9ae6f95364c945a14.

* Make ESC great again

* Improve readability

---------

Co-authored-by: Uku Taht <Uku.taht@gmail.com>

--- a/lib/plausible_web/templates/site/settings_props.html.heex
+++ b/lib/plausible_web/templates/site/settings_props.html.heex
@@ -18,10 +18,14 @@
           Custom Properties
         </h1>
 
-        <h2 class="mt-1 text-sm leading-5 text-gray-500 dark:text-gray-400">
-          Attach custom properties when sending a pageview or an event to
-          create custom metrics
-        </h2>
+        <p class="mt-2 text-sm leading-5 text-gray-500 dark:text-gray-200">
+          Attach Custom Properties when sending a Pageview or an Event to
+          create custom metrics.
+        </p>
+        <p class="text-sm leading-5 text-gray-500 dark:text-gray-200">
+          In order for the properties to show up on your dashboard, you need to
+          explicitly add them below first.
+        </p>
       </span>
 
       <.link
@@ -48,7 +52,7 @@
     <PlausibleWeb.Components.Site.Feature.toggle
       site={@site}
       setting={:props_enabled}
-      label="Show properties in the dashboard"
+      label="Show Properties in the Dashboard"
       conn={@conn}
     >
       <%= live_render(@conn, PlausibleWeb.Live.PropsSettings,
