Open docs links in new window (#3360)
* Some fixes

* Open link in new window

* open in new window

* Open in new window

--- a/lib/plausible_web/templates/site/settings_funnels.html.heex
+++ b/lib/plausible_web/templates/site/settings_funnels.html.heex
@@ -4,6 +4,8 @@
     during the private preview. Pricing will be announced soon. See
     examples and learn more in <a
       class="font-medium text-yellow underline hover:text-yellow-600"
+      target="_blank"
+      rel="noreferrer"
       href="https://plausible.io/docs/funnel-analysis"
     >our docs</a>.
   </PlausibleWeb.Components.Generic.notice>
