--- a/lib/plausible_web/templates/site/settings_funnels.html.heex
+++ b/lib/plausible_web/templates/site/settings_funnels.html.heex
@@ -41,8 +41,7 @@
       conn={@conn}
     >
       <%= live_render(@conn, PlausibleWeb.Live.FunnelSettings,
-        session: %{"site_id" => @site.id, "domain" => @site.domain},
-        router: PlausibleWeb.Router
+        session: %{"site_id" => @site.id, "domain" => @site.domain}
       ) %>
     </PlausibleWeb.Components.Site.Feature.toggle>
   </div>
