Handle missing or expired token in password reset action and LV gracefully (#3387)
This change addresses two problems:

* controller action crashing missing "token" param - it's handled gracefully
  now and will not pollute Sentry anymore with http://sentry.plausible.io/organizations/sentry/issues/4319
* LiveView receives email extracted from token on initial page load instead
  of reverifying token on every re-mount (which can happen when somebody
  leaves form open for an extended period of time; rare but happens and
  needlessly pollutes Sentry as well)

--- a/lib/plausible_web/templates/auth/password_reset_form.html.eex
+++ b/lib/plausible_web/templates/auth/password_reset_form.html.eex
@@ -1,4 +1,4 @@
 <%= live_render(@conn, PlausibleWeb.Live.ResetPasswordForm,
     container: {:div, class: "contents"},
-    session: %{"reset_token" => @token}
+    session: %{"email" => @email}
 ) %>
