Use Phoenix LiveView for the upgrade page (#3382)
* add a new upgrade page liveview behind a FF

* Create plans_v4.json file

* Add the upgrade page UI template and some basic functionalities

* different content based on subscription plan existing or not
* pageview slider
* monthly/yearly switch

* fix tests

* split into 2 separate functions

* rename variables

* implement volume slider + read default interval/volume from plan

* organize choose-plan.ex better

* remove unused vars from tests

* make monthly_cost and yearly_cost nil by default

The actual prices for all plans are stored in Paddle. We don't need to
keep the duplicates in the JSON files.

* add fetch_prices/1 to PaddleApi

* make v4 business ID's differ from growth ones

* render actual price information from plans

...and make the prices in both growth and business plan boxes change
dynamically when the pageview slider or interval is changed.

* highlight current subscription plan box

* add test describe block for business tier subscription

* connect to live socket only on the specific LV page using focus.html

* only wrap the input slider inside the form

* little readability improvement

* add v4 team_member_limits (after rebase with master)

* extract monthly_quota_box function in user_settings

When the business_tier FF is enabled, this section is different and
links to the new upgrade page.

* document subscription statuses

* change _notice.html.eex to .heex

* extract subscription status notice components

* add failed payment notices to upgrade page

* create class_of_element/2 convenience function for testing

* add cancel_subscription mix task

* implement checkout buttons

* mix format

* get all available plans with prices through plans.ex

* use more suitable function for fetching usage

* avoid double db lookups on mount

* rename variable

* separate functions for getting plan by product_id vs subscriptio

--- a/lib/plausible_web/templates/auth/user_settings.html.heex
+++ b/lib/plausible_web/templates/auth/user_settings.html.heex
@@ -1,16 +1,26 @@
 <%= if !Application.get_env(:plausible, :is_selfhost) do %>
-  <div class="max-w-2xl px-8 pt-6 pb-8 mx-auto mt-24 bg-white border-t-2 border-orange-200 rounded rounded-t-none shadow-md dark:bg-gray-800 dark:border-orange-200 ">
-    <div class="flex justify-between">
-      <h2 class="text-xl font-black dark:text-gray-100">Subscription Plan</h2>
-      <span
-        :if={@subscription}
-        class={[
-          "inline-flex items-center px-2.5 py-0.5 rounded-md text-sm font-bold leading-5",
-          subscription_colors(@subscription.status)
-        ]}
-      >
-        <%= present_subscription_status(@subscription.status) %>
-      </span>
+  <div class="max-w-2xl px-8 pt-4 pb-8 mx-auto mt-24 bg-white border-t-2 border-orange-200 rounded rounded-t-none shadow-md dark:bg-gray-800 dark:border-orange-200 ">
+    <div class="flex flex-wrap justify-between">
+      <h2 class="text-xl font-black dark:text-gray-100 w-max mr-4 mt-2">Subscription Plan</h2>
+      <div class="gap-x-2 mt-2 inline-flex">
+        <span
+          :if={@subscription && Plausible.Billing.Plans.business_tier?(@subscription)}
+          class={[
+            "w-max px-2.5 py-0.5 rounded-md text-sm font-bold leading-5 text-indigo-600 bg-blue-100 dark:text-yellow-200 dark:border dark:bg-inherit dark:border-yellow-200"
+          ]}
+        >
+          Business
+        </span>
+        <span
+          :if={@subscription}
+          class={[
+            "w-max px-2.5 py-0.5 rounded-md text-sm font-bold leading-5",
+            subscription_colors(@subscription.status)
+          ]}
+        >
+          <%= present_subscription_status(@subscription.status) %>
+        </span>
+      </div>
     </div>
 
     <div class="my-4 border-b border-gray-400"></div>
@@ -50,38 +60,11 @@
     </div>
 
     <div class="flex flex-col items-center justify-between mt-8 sm:flex-row sm:items-start">
-      <div
-        class="h-32 px-2 py-4 my-4 text-center bg-gray-100 rounded dark:bg-gray-900"
-        style="width: 11.75rem;"
-      >
-        <h4 class="font-black dark:text-gray-100">Monthly quota</h4>
-        <%= if @subscription do %>
-          <div class="py-2 text-xl font-medium dark:text-gray-100">
-            <%= subscription_quota(@subscription) %> pageviews
-          </div>
-
-          <.styled_link
-            :if={@subscription.status == "active"}
-            href={Routes.billing_path(@conn, :change_plan_form)}
-            class="text-sm font-medium"
-          >
-            Change plan
-          </.styled_link>
-
-          <span
-            :if={@subscription.status == "past_due"}
-            class="text-sm text-gray-600 dark:text-gray-400 font-medium"
-            tooltip="Please update your billing details before changing plans"
-          >
-            Change plan
-          </span>
-        <% else %>
-          <div class="py-2 text-xl font-medium dark:text-gray-100">Free trial</div>
-          <.styled_link class="text-sm font-medium" href={Routes.billing_path(@conn, :upgrade)}>
-            Upgrade
-          </.styled_link>
-        <% end %>
-      </div>
+      <PlausibleWeb.Components.Billing.monthly_quota_box
+        subscription={@subscription}
+        conn={@conn}
+        business_tier={FunWithFlags.enabled?(:business_tier, for: @user)}
+      />
       <div
         class="h-32 px-2 py-4 my-4 text-center bg-gray-100 rounded dark:bg-gray-900"
         style="width: 11.75rem;"
@@ -168,7 +151,11 @@
       <% true -> %>
         <div class="mt-8">
           <%= link("Upgrade",
-            to: "/billing/upgrade",
+            to:
+              if(FunWithFlags.enabled?(:business_tier, for: @user),
+                do: PlausibleWeb.Router.Helpers.billing_path(PlausibleWeb.Endpoint, :choose_plan),
+                else: "/billing/upgrade"
+              ),
             class:
               "inline-block px-3 py-2 border border-transparent text-sm leading-4 font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-500 focus:outline-none focus:border-indigo-700 focus:ring active:bg-indigo-700 transition ease-in-out duration-150"
           ) %>
