Refactor enterprise plan upgrade and change-plan actions (#3397)
* rename enterprise?/1 function

* change link text to Upgrade when subscription deleted

* extract paddle_button and paddle_script components

* create a new upgrade-to-enterprise-plan page

* extract upgrade_link component

* rename function

* link to enterprise plan upgrade page from settings

...if the user has an enterprise plan configured

* fetch enterprise plan price on the new page

* add change_enterprise_plan functionality on the new page

* render existing change_enterprise_plan_contact_us.html

...when subscribed to latest configured enterprise plan

* rename vars and extract resumable? fn

* remove dead billing route

* small test refactor: extract convenience fn

* add tests for...

...restricting paused and past_due subscription access to the new
enterprise plan page.

1. redirect to /settings from the controller action
2. hiding the change-plan link from the user settings

* implement redirect to /settings

* hide the enterprise upgrade/change-plan link

* add tests for a deleted enterprise subscription

* plug in the new controller action and delete dead code

* optimize for dark mode

* fix compile warning

* credo fix

* display N/A instead of crash when price nil

* change subscription.status type to Ecto.Enum

Also, create a new `Subscription.Status` module that exposes macros to
return the used atom values (prevent typos at compiletime).

* fix bug (@conn not available anymore)

* use Routes.billing_path where applicable

* add a status() type

* silence credo

* refactor suggestion from review

Co-authored-by: Adrian Gruntkowski <adrian.gruntkowski@gmail.com>

* Remove the __using__ macro from Subscription.Status

... instead be explicit about requires and aliases and also order
the use, import, require, and alias clauses according to
https://github.com/christopheradams/elixir_style_guide#module-attribut

--- a/lib/plausible_web/templates/auth/user_settings.html.heex
+++ b/lib/plausible_web/templates/auth/user_settings.html.heex
@@ -26,7 +26,9 @@
     <div class="my-4 border-b border-gray-400"></div>
 
     <div
-      :if={@subscription && @subscription.status == "deleted"}
+      :if={
+        @subscription && @subscription.status == Plausible.Billing.Subscription.Status.deleted()
+      }
       class="p-2 bg-red-100 rounded-lg sm:p-3"
     >
       <div class="flex flex-wrap items-center justify-between">
@@ -61,8 +63,8 @@
 
     <div class="flex flex-col items-center justify-between mt-8 sm:flex-row sm:items-start">
       <PlausibleWeb.Components.Billing.monthly_quota_box
+        user={@user}
         subscription={@subscription}
-        conn={@conn}
         business_tier={FunWithFlags.enabled?(:business_tier, for: @user)}
       />
       <div
@@ -70,7 +72,7 @@
         style="width: 11.75rem;"
       >
         <h4 class="font-black dark:text-gray-100">Next bill amount</h4>
-        <%= if @subscription && @subscription.status in ["active", "past_due"] do %>
+        <%= if @subscription && @subscription.status in [Plausible.Billing.Subscription.Status.active(), Plausible.Billing.Subscription.Status.past_due()] do %>
           <div class="py-2 text-xl font-medium dark:text-gray-100">
             <%= PlausibleWeb.BillingView.present_currency(@subscription.currency_code) %><%= @subscription.next_bill_amount %>
           </div>
@@ -90,7 +92,7 @@
       >
         <h4 class="font-black dark:text-gray-100">Next bill date</h4>
 
-        <%= if @subscription && @subscription.next_bill_date && @subscription.status in ["active", "past_due"] do %>
+        <%= if @subscription && @subscription.next_bill_date && @subscription.status in [Plausible.Billing.Subscription.Status.active(), Plausible.Billing.Subscription.Status.past_due()] do %>
           <div class="py-2 text-xl font-medium dark:text-gray-100">
             <%= Timex.format!(@subscription.next_bill_date, "{Mshort} {D}, {YYYY}") %>
           </div>
@@ -140,7 +142,7 @@
     </article>
 
     <%= cond do %>
-      <% @subscription && @subscription.status in ["active", "past_due", "paused"] && @subscription.cancel_url -> %>
+      <% Plausible.Billing.Subscriptions.resumable?(@subscription) && @subscription.cancel_url -> %>
         <div class="mt-8">
           <%= link("Cancel my subscription",
             to: @subscription.cancel_url,
@@ -150,15 +152,10 @@
         </div>
       <% true -> %>
         <div class="mt-8">
-          <%= link("Upgrade",
-            to:
-              if(FunWithFlags.enabled?(:business_tier, for: @user),
-                do: PlausibleWeb.Router.Helpers.billing_path(PlausibleWeb.Endpoint, :choose_plan),
-                else: "/billing/upgrade"
-              ),
-            class:
-              "inline-block px-3 py-2 border border-transparent text-sm leading-4 font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-500 focus:outline-none focus:border-indigo-700 focus:ring active:bg-indigo-700 transition ease-in-out duration-150"
-          ) %>
+          <PlausibleWeb.Components.Billing.upgrade_link
+            user={@user}
+            business_tier={FunWithFlags.enabled?(:business_tier, for: @user)}
+          />
         </div>
     <% end %>
   </div>
@@ -344,7 +341,7 @@
     Deleting your account removes all sites and stats you've collected
   </p>
 
-  <%= if @subscription && @subscription.status == "active" do %>
+  <%= if @subscription && @subscription.status == Plausible.Billing.Subscription.Status.active() do %>
     <span class="mt-6 bg-gray-300 button dark:bg-gray-600 hover:shadow-none hover:bg-gray-300">
       Delete my account
     </span>
